<resources>
    <string name="app_name">Dr Smart</string>
    <string name="login">ZALOGUJ</string>
    <string name="loginHint">Login</string>
    <string name="passwordHint">Hasło</string>
    <string name="loginEmpty">Login jest pusty</string>
    <string name="passwordEmpty">Hasło jest puste</string>
    <string name="incorrectLoginOrPassword">Błędny login lub hasło.</string>
    <string name="connectionError">Błąd połączenia z Internetem.</string>
    <string name="webServiceError">System Dr Smart jest nieosiągalny. Spróbuj ponownie później.</string>
    <string name="visits">Wizyty</string>
    <string name="visitDetails">Szczegóły wizyty</string>
    <string name="medicalHistory">Historia medyczna</string>
    <string name="recordDetails">Szczegóły choroby</string>
    <string name="userDetails">Twoje dane</string>
    <string name="logOut">Wyloguj</string>
    <string name="registerVisit">Rejestracja wizyty</string>
    <string name="registerVisitAction">Zarejestruj wizytę</string>
    <string name="registerVisitDone">Wizyta została zarejestrowana</string>
    <string name="registerVisitDoctor">Lekarz</string>
    <string name="registerVisitSpecialty">Specjalizacja lekarza</string>
    <string name="registerVisitDate">Dzień</string>
    <string name="registerVisitTime">Godzina</string>
    <string name="registerVisitVisitType">Typ wizyty</string>
    <string name="allVisits">WSZYSTKIE</string>
    <string name="futureVisits">NADCHODZĄCE</string>
    <string name="pastVisits">ZAKOŃCZONE</string>
    <string name="userName">Imię i nazwisko</string>
    <string name="userGender">Płeć</string>
    <string name="userPesel">PESEL</string>
    <string name="userDateOfBirth">Data urodzenia</string>
    <string name="userAddress">Adres</string>
    <string name="userCity">Miasto</string>
    <string name="userProvince">Województwo</string>
    <string name="recordDiagnosis">Diagnoza</string>
    <string name="recordExaminations">Przeprowadzone badania</string>
    <string name="recordRecommendations">Zlecone badania</string>
    <string name="recordInformation">Informacje od lekarza</string>
    <string name="recordComments">Dodatkowe uwagi</string>
    <string name="recordEmpty">brak</string>
    <string name="visitStatus">Status</string>
    <string name="visitType">Typ</string>
    <string name="date1">Data</string>
    <string name="date2">Termin</string>
    <string name="doctor">Lekarz</string>
    <string name="doctorSpecialty">Specjalizacja lekarza</string>
</resources>
