<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:padding="65dp"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="60dp" />

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/loginHint" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_marginBottom="60dp"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:hint="@string/passwordHint" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/colorWhite" />

</LinearLayout>
