<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/dateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/date2" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/doctorTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/doctor" />

        <TextView
            android:id="@+id/doctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/doctorSpecialtyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/doctorSpecialty" />

        <TextView
            android:id="@+id/doctorSpecialty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/typeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/visitType" />

        <TextView
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/statusTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/visitStatus" />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

    </LinearLayout>

</ScrollView>