<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/specialtyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerVisitSpecialty"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginBottom="2dp" />

        <Spinner
            android:id="@+id/specialty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:prompt="@string/registerVisitSpecialty"
            android:background="@color/colorWhite"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/doctorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerVisitDoctor"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginBottom="2dp" />

        <Spinner
            android:id="@+id/doctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:prompt="@string/registerVisitDoctor"
            android:background="@color/colorWhite"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/dateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerVisitDate"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginBottom="2dp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/timeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerVisitTime"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginBottom="2dp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/visitTypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerVisitVisitType"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginBottom="2dp" />

        <Spinner
            android:id="@+id/visitType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:prompt="@string/registerVisitVisitType"
            android:background="@color/colorWhite" />

    </LinearLayout>

</ScrollView>