<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/dateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/recordDate" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/diagnosisTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/recordDiagnosis" />

        <TextView
            android:id="@+id/diagnosis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/examinationsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/recordExaminations" />

        <TextView
            android:id="@+id/examinations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/recommendationsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/recordRecommendations" />

        <TextView
            android:id="@+id/recommendations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/informationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/recordInformation" />

        <TextView
            android:id="@+id/information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/commentsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/recordComments" />

        <TextView
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

    </LinearLayout>

</ScrollView>